<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.register.RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/app_name_short"
        android:src="@drawable/ib" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/prompt_username"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:letterSpacing="0.1"

        android:orientation="horizontal"
        android:padding="16dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:selectAllOnFocus="true"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:layout_below="@id/logo"
        />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="23dp"
        android:layout_marginStart="50dp"
        android:contentDescription="@string/username_logo"
        android:src="@drawable/user"
        android:layout_below="@id/logo"
 />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"

        android:inputType="textPassword"
        android:letterSpacing="0.1"
        android:orientation="horizontal"
        android:padding="16dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:selectAllOnFocus="true"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:layout_below="@id/username"
        />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="23dp"
        android:layout_marginStart="50dp"
        android:contentDescription="@string/password_logo"
        android:src="@drawable/password"
        android:layout_below="@id/username"
 />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/prompt_confirm_password"
        android:imeActionLabel="@string/action_sign_in"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"

        android:inputType="textPassword"
        android:letterSpacing="0.1"
        android:orientation="horizontal"
        android:padding="16dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:selectAllOnFocus="true"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:layout_below="@id/password"
/>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="23dp"
        android:layout_marginStart="50dp"
        android:contentDescription="@string/password_logo"
        android:src="@drawable/password"
        android:layout_below="@id/password"
 />

    <Button
        android:id="@+id/register"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/border"
        android:layout_centerHorizontal="true"
        android:enabled="false"
        android:padding="15dp"
        android:text="@string/action_register"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_below="@id/confirmPassword"
 />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_below="@id/register"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="80dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/existing_account"
        android:textColor="#fff"
        android:textSize="17sp"
        android:textStyle="bold"
        />

</RelativeLayout>