<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".ui.login.LoginActivity">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ib"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/logo"
        android:contentDescription="@string/app_name_short"/>

    <TextView
        android:id="@+id/bytes"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_below="@id/logo"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:text="@string/app_name_short"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        android:layout_below="@id/bytes"
        android:padding="16dp"

        android:hint="@string/prompt_username"
        android:textColorHint="#fff"
        android:letterSpacing="0.1"
        android:textColor="#fff"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:importantForAutofill="no" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:layout_marginStart="35dp"
        android:src="@drawable/user"
        android:layout_below="@id/bytes"
        android:contentDescription="@string/username_logo" />

    <EditText
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="16dp"

        android:hint="@string/prompt_password"
        android:windowSoftInputMode="adjustPan"
        android:textColorHint="#fff"
        android:letterSpacing="0.1"
        android:textColor="#fff"
        android:imeActionLabel="@string/action_sign_in"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:layout_below="@id/username"
        android:importantForAutofill="no" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginStart="35dp"
        android:src="@drawable/password"
        android:layout_below="@id/username"
        android:contentDescription="@string/password_logo" />

    <EditText
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:id="@+id/devUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="16dp"

        android:hint="@string/prompt_url"
        android:windowSoftInputMode="adjustPan"
        android:textColorHint="#fff"
        android:letterSpacing="0.1"
        android:textColor="#fff"
        android:imeActionLabel="@string/server_url"
        android:imeOptions="actionDone"
        android:selectAllOnFocus="true"
        android:layout_below="@id/password"
        android:importantForAutofill="no"
        android:visibility="invisible"
        />

    <ImageView
        android:id="@+id/devUrlIcon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginStart="35dp"
        android:src="@drawable/ic_language_black_24dp"
        android:layout_below="@id/password"
        android:contentDescription="@string/password_logo"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/border"
        android:enabled="false"
        android:padding="15dp"
        android:textStyle="bold"
        android:text="@string/action_sign_in"
        android:textColor="#fff"
        android:layout_below="@id/password"
        />

    <Button
        android:id="@+id/register"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/border"
        android:enabled="false"
        android:padding="15dp"
        android:text="@string/action_register"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_below="@id/password"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/login"

        />

    <ProgressBar
        android:id="@+id/login_bar"
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/devUrl"
        android:layout_gravity="center"
        android:layout_marginTop="57dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:indeterminate="true"
        android:indeterminateTint="#FFFFFF" />


</RelativeLayout>