<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.event.statistics.StatisticsFragment">


<!--    <com.github.mikephil.charting.charts.HorizontalBarChart
        android:id="@+id/chart1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="280dp"
        android:background="@android:color/white"
        android:paddingBottom="?attr/actionBarSize" />-->

    <ImageView
        android:id="@+id/covid_image"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/covid_image"
        android:src="@drawable/covid_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statistics_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="670dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="90dp"
        android:gravity="left"
        android:text="@string/statistics_label"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold"

        android:windowSoftInputMode="adjustNothing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/total_confirmed"
        android:layout_width="115dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"

        android:layout_below="@id/covid_image"
        android:gravity="left"
        android:text="@string/total_confirmed_label"
        android:textColor="#000"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/total_confirmed_data"
        android:layout_width="87dp"
        android:layout_height="20dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_below="@id/covid_image"
        android:layout_toEndOf="@id/total_confirmed"
        android:gravity="left"
        android:textColor="#F44336"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/total_deaths"
        android:layout_width="95dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/total_confirmed"
        android:gravity="left"
        android:text="@string/total_deaths_label"
        android:textColor="#000"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/total_deaths_data"
        android:layout_width="110dp"
        android:layout_height="20dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/total_confirmed"
        android:layout_toEndOf="@id/total_deaths"
        android:gravity="left"
        android:textColor="#F44336"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/total_recovered"
        android:layout_width="115dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/total_deaths"
        android:gravity="left"
        android:text="@string/total_recovered_label"
        android:textColor="#000"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/total_recovered_data"
        android:layout_width="87dp"
        android:layout_height="20dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/total_deaths"
        android:layout_toEndOf="@id/total_recovered"
        android:gravity="left"
        android:textColor="#4CAF50"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/new_total_confirmed"
        android:layout_width="115dp"
        android:layout_height="20dp"
        android:layout_marginStart="220dp"

        android:layout_below="@id/covid_image"
        android:gravity="left"
        android:text="@string/new_confirmed_label"
        android:textColor="#000"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/new_confirmed_data"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_below="@id/covid_image"
        android:layout_toEndOf="@id/new_total_confirmed"
        android:gravity="left"
        android:textColor="#F44336"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/new_total_deaths"
        android:layout_width="90dp"
        android:layout_height="20dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/new_total_confirmed"
        android:gravity="left"
        android:text="@string/new_deaths_label"
        android:textColor="#000"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/new_deaths_data"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/new_total_confirmed"
        android:layout_toEndOf="@id/new_total_deaths"
        android:gravity="left"
        android:textColor="#F44336"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/new_total_recovered"
        android:layout_width="110dp"
        android:layout_height="20dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/new_total_deaths"
        android:gravity="left"
        android:text="@string/new_recovered_label"
        android:textColor="#000"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/new_recovered_data"
        android:layout_width="75dp"
        android:layout_height="20dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/new_deaths_data"
        android:layout_toEndOf="@id/new_total_recovered"
        android:gravity="left"
        android:textColor="#4CAF50"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/last_updated"
        android:layout_width="115dp"
        android:layout_height="30dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/new_total_recovered"
        android:gravity="left"
        android:text="@string/last_update_label"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/last_updated_data"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/new_total_recovered"
        android:layout_toEndOf="@id/last_updated"
        android:gravity="left"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="280dp"
        android:background="@android:color/white"
        android:paddingBottom="?attr/actionBarSize" />

    <TextView
        android:id="@+id/statistics_empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_event_data"
        android:visibility="gone"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="205dp"
        tools:layout_editor_absoluteY="365dp" />

    <ProgressBar
        android:id="@+id/progressbarStatistics"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/colorPrimaryDark"
        android:indeterminate="true"
        android:indeterminateTint="#1a09d6"
        android:paddingBottom="?attr/actionBarSize"
        app:layout_anchorGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pager"
        app:layout_constraintVertical_bias="0.1" />
</RelativeLayout>